# soda-pool

./: .gitignore  Cargo.toml  Makefile  README.md  ROADMAP.md  bacon.toml
.github/workflows/: ci.yml
auto-discovery/: Cargo.toml
auto-discovery/src/: broken_endpoints.rs  cloneable_request.rs  deps.rs  dns.rs  endpoint_template.rs  error.rs  lib.rs  macros.rs  pool.rs  ready_channels.rs  retry.rs  wrapped.rs
example-client/: Cargo.toml
example-client/src/: main.rs
example-protobuf.gen/: Cargo.toml
example-protobuf.gen/src/: broken_endpoints.rs  dns.rs  endpoint_template.rs  health.rs  health_pool.rs  lib.rs  request_generator.rs  wrapped.rs
example-server/: Cargo.toml
example-server/src/: main.rs
example/client/: Cargo.toml
example/client/src/: main.rs
example/generator/: Cargo.toml
example/generator/src/: main.rs
example/proto/: example.proto
example/protobuf.gen/: Cargo.toml
example/protobuf.gen/src/: health.rs  health_pool.rs  wrapped.rs
example/server/: Cargo.toml
example/server/src/: main.rs
perf-benchmark/: Cargo.toml
perf-benchmark/benches/: bench.rs
proto/: example.proto
soda-pool/: Cargo.toml
soda-pool-build/: Cargo.toml
soda-pool-build/src/: error.rs  generator.rs  lib.rs  model.rs  parser.rs
soda-pool-build/src/test_cases/: generator_success.rs  parser_success.rs  success.rs
soda-pool/src/: broken_endpoints.rs  dns.rs  endpoint_template.rs  lib.rs  macros.rs  mock.rs  pool.rs  ready_channels.rs  retry.rs
tonic-generator/: Cargo.toml
tonic-generator/src/: main.rs
tonic-pool-build/: Cargo.toml
tonic-pool-build/src/: error.rs  generator.rs  lib.rs  parser.rs
