[workspace]
resolver = "3"
members = [
    "soda-pool",
    "soda-pool-build",

    "example-client",
    "example-protobuf.gen",
    "example-server",
    "perf-benchmark",
    "tonic-generator",
]

package.edition = "2024"
package.rust-version = "1.86.0"

[workspace.dependencies]
chrono = "0.4.40"
colog = "1.3.0"
futures = "0.3.28"
http = "1.3.1"
paste = "1.0.15"
prost = "0.13.5"
prost-build = "0.13.5"
rand = "0.9.0"
rstest = "0.25.0"
serial_test = "3.2.0"
tokio = "1.44.2"
tokio-util = "0.7.14"
tonic = "0.13.0"
tonic-build = "0.13.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
missing_debug_implementations = { level = "warn" }
#missing_docs = { level = "warn" } # todo: -> deny


[workspace.lints.clippy]
pedantic = "deny"

# TODO: documentation
missing_errors_doc = { level = "warn", priority = 1 }
missing_panics_doc = { level = "warn", priority = 1 }

# performance stuff, only warn
inline_always = { level = "warn", priority = 1 }
