[workspace]
members = [
    "soda-pool",
    "soda-pool-build",

    "example/client",
    "example/protobuf.gen",
    "example/server",
    "example/generator",

    "perf-benchmark",
]

package.repository = "https://github.com/Makinami/soda-pool"
package.edition = "2021"
package.rust-version = "1.82.0"
package.readme = "README.md"

[workspace.dependencies]
async-trait = "0.1"
chrono = "0.4"
colog = "1.3"
futures = "0.3"
http = "1.3"
paste = "1.0"
prettyplease = "0.2"
proc-macro2 = "1.0"
prost = "0.13"
prost-build = "0.13"
quote = "1.0"
rand = "0.9"
rstest = "0.25"
serial_test = "3.2"
syn = "2.0"
tokio = "1.44"
tokio-stream = "0.1"
tokio-util = "0.7"
tonic = "0.13"
tonic-build = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
missing_debug_implementations = { level = "warn" }
missing_docs = { level = "warn" } # todo: -> deny


[workspace.lints.clippy]
pedantic = "deny"

# performance stuff, only warn
inline_always = { level = "warn", priority = 1 }
