[package]
name = "auto-discovery"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
http = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }

[features]
mock-dns = []
tls = ["tonic/tls"]

[dev-dependencies]
rstest = { workspace = true }
