[package]
name = "auto-discovery"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
http = { workspace = true }
rand = { workspace = true }
# todo-correctness: requiring tr-multi-thread ? Do I need a runtime checks in blocking code?
tokio = { workspace = true, features = ["rt-multi-thread"]}
tokio-util = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }

[features]
mock-dns = []
tls = ["tonic/tls"]

[dev-dependencies]
rstest = { workspace = true }

[lints.clippy]
unwrap_used = "deny"
