[package]
name = "auto-discovery"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
http = { workspace = true }
rand = { workspace = true }
# todo-correctness: requiring tr-multi-thread ? Do I need a runtime checks in blocking code?
tokio = { workspace = true, features = ["rt-multi-thread"]}
tokio-util = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
paste = { workspace = true }

[features]
mock-dns = []

# These features mirror tonic features
_tls-any = [] # Internal. Please choose one of `tls-ring` or `tls-aws-lc`
tls-ring = ["_tls-any", "tonic/tls-ring"]
tls-aws-lc = ["_tls-any", "tonic/tls-aws-lc"]
tls-native-roots = ["_tls-any", "tonic/tls-native-roots"]
tls-webpki-roots = ["_tls-any", "tonic/tls-webpki-roots"]

[dev-dependencies]
rstest = { workspace = true }
serial_test = { workspace = true }

[lints]
workspace = true
