[package]
name = "example-client"
version = "0.1.0"
edition = "2024"

[dependencies]
colog = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
url = { workspace = true }

example-protobuf = { path = "../example-protobuf.gen" }
auto-discovery = { path = "../auto-discovery" }
