[package]
name = "example-client"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
colog = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
url = { workspace = true }
tonic = { workspace = true }
tracing-subscriber = "0.3"

example-protobuf = { path = "../example-protobuf.gen" }
auto-discovery = { path = "../auto-discovery" }
