[package]
name = "example-client"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

example-protobuf = { path = "../example-protobuf.gen" }
auto-discovery = { path = "../auto-discovery" }
