[package]
name = "soda-pool-build"
version = "0.1.0"
edition.workspace = true

[dependencies]
syn = { workspace = true, features = ["full", "extra-traits"] }
tracing = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
prettyplease = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
