[package]
name = "soda-pool-build"
version = "0.0.1"
license = "MIT OR Apache-2.0"
description = "Generator of client code for soda-pool"
repository = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
keywords = ["grpc", "pool", "client", "codegen", "generator"]

[dependencies]
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }
tracing = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
