[package]
name = "soda-pool"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
http = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tokio-util = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
paste = { workspace = true }
futures = "0.3"
tokio-stream = "0.1"

[features]
mock-dns = []

# These features mirror tonic features
_tls-any = [] # Internal. Please choose one of `tls-ring` or `tls-aws-lc`
tls-ring = ["_tls-any", "tonic/tls-ring"]
tls-aws-lc = ["_tls-any", "tonic/tls-aws-lc"]
tls-native-roots = ["_tls-any", "tonic/tls-native-roots"]
tls-webpki-roots = ["_tls-any", "tonic/tls-webpki-roots"]

[dev-dependencies]
rstest = { workspace = true }
serial_test = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
