[package]
name = "soda-pool"
version = "0.0.1"
license = "MIT OR Apache-2.0"
description = "Connection pool for tonic's gRPC channels"
repository = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
keywords = ["grpc", "pool", "connection", "tonic"]
categories = ["network-programming", "web-programming"]

[dependencies]
chrono = { workspace = true }
http = { workspace = true }
futures = { workspace = true }
paste = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[features]
mock-dns = []

# These features mirror tonic features
_tls-any = [] # Internal. Please choose one of `tls-ring` or `tls-aws-lc`
tls-ring = ["_tls-any", "tonic/tls-ring"]
tls-aws-lc = ["_tls-any", "tonic/tls-aws-lc"]
tls-native-roots = ["_tls-any", "tonic/tls-native-roots"]
tls-webpki-roots = ["_tls-any", "tonic/tls-webpki-roots"]

[dev-dependencies]
rstest = { workspace = true }
serial_test = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
