[package]
name = "soda-pool"
version = "0.0.1"
license = "MIT OR Apache-2.0"
description = "Connection pool for tonic's gRPC channels"
homepage = "https://github.com/Makinami/soda-pool"
documentation = "https://docs.rs/soda-pool/0.0.1"
repository = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
keywords = ["grpc", "pool", "connection", "tonic"]
categories = ["network-programming", "web-programming", "asynchronous"]

[dependencies]
chrono = { workspace = true }
http = { workspace = true }
futures = { workspace = true }
paste = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[features]
_mock-dns = []
tls = ["tonic/_tls-any"]

[dev-dependencies]
rstest = { workspace = true }
serial_test = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
