[package]
name = "tonic-generator"
version = "0.1.0"
edition = { workspace = true }
publish = false

[dependencies]
prost-build = { workspace = true }
tonic-build = { workspace = true }
soda-pool-build = { path = "../soda-pool-build" }

tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
