[package]
name = "example-client"
version = "0.1.0"
edition = { workspace = true }
publish = false

[dependencies]
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true }

example-protobuf = { path = "../protobuf.gen" }
soda-pool = { path = "../../soda-pool" }
