[package]
name = "example-server"
version = "0.1.0"
edition = { workspace = true }
publish = false

[dependencies]
rand = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
tracing-subscriber = { workspace = true }

example-protobuf = { path = "../protobuf.gen" }
